--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <meta property="og:site_name" content="แจ้ซ้อนวินเทจ Chae Son Vintage" />
     <meta property="og:locale" content="th" />
 
-    <!-- <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Pinyon+Script" rel="stylesheet"> -->
+    <link href="https://fonts.googleapis.com/css?family=Kanit:300,400|Sriracha&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles-merged.css">
     <!-- <link rel="stylesheet" href="css/style.min.css"> -->
     <link rel="stylesheet" href="css/style.css">
