--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
           <div class="col-md-3 col-sm-3 probootstrap-animate">
               <img class="logopic piccenter img-responsive" alt="Booking with Agoda Home" src="asset/agoda-logo.png">
               <h3 class="kanit acenter">จองผ่าน Agoda</h3>
-              <button class="btn btn-primary btn-lg piccenter kanit" disabled>เร็ว ๆ นี้</button>
+              <a href="https://www.agoda.com/th-th/pages/agoda/default/page_hotel.aspx?hotel_id=10307320#" target="_blank"><button class="btn btn-primary btn-lg piccenter kanit" >ดูรายละเอียด และ จองห้องพัก</button></a>
           </div>
           <div class="col-md-3 col-sm-3 probootstrap-animate " data-section="contact">
               <img class="logopic piccenter img-responsive" alt="Booking with Line Official Account" src="asset/line-id.png">
@@ -505,7 +505,8 @@
               <div class="row">
                 <div class="col-md-6">
                   <p> 259 หมู่ 11 ตำบลแจ้ซ้อน <br> อำเภอเมืองปาน จังหวัดลำปาง 52240
-                  <br> เบอร์โทรติดต่อ 081-898-3072</p>
+                  <br> เบอร์โทรติดต่อ 081-898-3072
+                <br> Email : <a href="mailto:contact@chaesonvintage.com">contact@chaesonvintage.com</a> </p>
                 </div>
                 <div class="col-md-6">
                   
@@ -530,7 +531,7 @@
       <div class="container">
         <div class="row">
           <div class="col-md-8">
-              <p class="kanit text-light">&copy; 2019 Chaeson Vintage All Rights Reserved. Themeplate by <a href="https://uicookies.com/">uiCookies</a><br>
+              <p class="kanit text-light">&copy; 2019 Chaeson Vintage and TDC All Rights Reserved. Themeplate by <a href="https://uicookies.com/">uiCookies</a><br>
           &copy; 2017 <a href="https://uicookies.com/">uiCookies:Resto</a>. All Rights Reserved. Images by <a href="https://graphicburger.com/">GraphicBurger</a> &amp; <a href="https://unsplash.com/">Unsplash</a></p>
 
           </div>
