information-tent-update

--- a/index.html
+++ b/index.html
@@ -403,8 +403,12 @@
                 <ul>
                   <li>เรารักษาความเป็นส่วนตัวให้กับคุณ ครอบครัว และมิตรสหาย ด้วยการรับเพียง 1 คณะ ต่อวัน</li>
                   <li>บ้านหลังนี้พักได้ 6 ท่าน เด็กอายุไม่เกิน 8 ปี พักฟรี 3 ท่าน</li>
-                  <li>เบาะเสริม เพิ่มท่านละ 300 บาท</li>
-                  <li>มาเป็นคณะใหญ่ มีบริการสถานที่กางเต้นท์ หลังละ 200 บาท</li>
+                  <li>เบาะเสริม หรือ กางเต้นท์ เพิ่มท่านละ 300 บาท</li>
+                  <li>มีบริการให้เช่าเต้นท์ (กรณีท่านนำเต้นท์มาเอง ไม่มีค่าใช้จ่ายเพิ่มเติม)</li>
+                  <ul>
+                    <li>เต้นท์ขนาดใหญ่ 2.6 x 2.6 x 2 เมตร ราคา 700 บาท/คืน พักได้ 5-6 ท่าน</li>
+                    <li>เต้นท์ขนาดกลาง 2 x 2.6 x 1.5 เมตร ราคา 400 บาท/คืน พักได้ 2-3 ท่าน</li>
+                  </ul>
                 </ul>                
           </div>
           <div class="col-sm-6 probootstrap-heading">
@@ -449,8 +453,7 @@
           <div class="col-md-3 col-sm-3 probootstrap-animate">
               <h3 class="kanit acenter">หรือ โทรมาสอบถามที่</h3>
               <li>081-898-3072</li>
-              <li>082-273-2170</li>
-              <li>093-102-2441</li>
+              <li>093-141-5252</li>
               <li>062-301-5300 (แม่บ้าน)</li>
           </div>
         </div>
